--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,11 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.sql.init.mode=always
 # Disable DevTools for tests
 spring.devtools.restart.enabled=false
+
+#########################################
+
+
+# Disable schema validation
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+
