lab reports added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,15 +19,15 @@ spring.datasource.username=
 spring.datasource.password=
 
 # JPA Configuration - Use create-drop for development
-# spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 
 # Disable constraint creation (let our custom schema handle it)
-# spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
+#spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.hbm2ddl.constraint-imports=false
 
 # Server Configuration
@@ -35,7 +35,7 @@ server.port=8080
 
 # SQLite specific configuration
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-#spring.sql.init.mode=always
-spring.sql.init.mode=never
+spring.sql.init.mode=always
+#spring.sql.init.mode=never
 # Disable DevTools for tests
 spring.devtools.restart.enabled=false
